<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_meal"
        android:icon="@drawable/ic_meal"
        android:title="@string/nav_meal" />
    <item
        android:id="@+id/nav_exercise"
        android:icon="@drawable/ic_exercise"
        android:title="@string/nav_exercise" />
    <item
        android:id="@+id/nav_prediction"
        android:icon="@drawable/ic_prediction"
        android:title="@string/nav_prediction" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
